# config

./: .cproject  .gitignore  .project  CMakeLists.txt  LICENSE  README.md  in.cfg  in2.cfg  out.cfg  test.cfg
Debug/: config  makefile
Debug/src/: main.d  subdir.mk
runnable/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt  Config.cpp  Config.hpp  main.cpp
